--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,35 +12,52 @@
         android:layout_width="330dp"
         android:layout_height="37dp"
         android:text="@string/main_msj_bienvenida"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/lstDispositivos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/lstDispositivos"
+        android:layout_width="338dp"
+        android:layout_height="185dp"
+        app:layout_constraintTop_toBottomOf="@id/txtPresentacion"
+        app:layout_constraintBottom_toTopOf="@+id/btnConectar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnConectar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_btn_conectar"
+        app:layout_constraintTop_toBottomOf="@id/lstDispositivos"
+        app:layout_constraintBottom_toTopOf="@+id/btnHabitaciones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnHabitaciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_btn_habitaciones"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnConectar"
+        app:layout_constraintBottom_toTopOf="@+id/btnEscenarios"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPresentacion"
-        app:layout_constraintVertical_bias="0.379" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnEscenarios"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_btn_escenarios"
+        app:layout_constraintTop_toBottomOf="@id/btnHabitaciones"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnHabitaciones"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
