Almacenamiento de habitaciones Carga dinámica de habitaciones (ABM) Creación de modelo Habitacion Creación de controlador ControladorHabitaciones

--- a/app/src/main/res/layout/activity_habitaciones.xml
+++ b/app/src/main/res/layout/activity_habitaciones.xml
@@ -7,6 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".HabitacionesActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="Habitaciones"
+        app:titleTextColor="@android:color/white"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/txtPresentacion"
         android:layout_width="330dp"
@@ -16,58 +29,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.074" />
 
     <LinearLayout
-        android:layout_width="390dp"
-        android:layout_height="545dp"
+        android:id="@+id/layoutHabitaciones"
+        android:layout_width="393dp"
+        android:layout_height="434dp"
         android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPresentacion">
-        <Switch
-            android:id="@+id/swHabitacion1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 1"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <Switch
-            android:id="@+id/swHabitacion2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 2"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <Switch
-            android:id="@+id/swHabitacion3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 3"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <Switch
-            android:id="@+id/swHabitacion4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 4"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <Switch
-            android:id="@+id/swHabitacion5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 5"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <Switch
-            android:id="@+id/swHabitacion6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habitación 6"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAgregarHabitacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/global_btn_agregar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnEditarHabitacion"
+        app:layout_constraintTop_toBottomOf="@+id/layoutHabitaciones" />
+
+    <Button
+        android:id="@+id/btnEditarHabitacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/global_btn_editar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnEliminarHabitacion"
+        app:layout_constraintStart_toEndOf="@+id/btnAgregarHabitacion"
+        app:layout_constraintTop_toBottomOf="@+id/layoutHabitaciones" />
+
+    <Button
+        android:id="@+id/btnEliminarHabitacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/global_btn_eliminar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnEditarHabitacion"
+        app:layout_constraintTop_toBottomOf="@+id/layoutHabitaciones" />
 </androidx.constraintlayout.widget.ConstraintLayout>
